# houdini-main-changelogs

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/workflows/: rust.yml
log/: changelog.json
src/: bot.rs  html.rs  log.rs  main.rs  parsers.rs  types.rs  utils.rs
