[package]
name = "houdnini_main_changelogs"
version = "0.1.0"
authors = ["Alexander Alekhin <sphrand@gmail.com>"]
edition = "2021"

[[bin]]
name = "houdnini_main_changelogs_dev"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
dirs = "1.0.4"
dotenv = "0.13.0"
env_logger = "0.5.12"
failure = "0.1.6"
hyper = "=0.11.22"
itertools = "0.11.0"
regex = "1.9.6"
reqwest = "=0.9.9"
select = "0.6.0"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"

[profile.release]
lto = true
strip = true
opt-level = "z"
